sumo/tests/traci/VariableRetrieval/Simulation/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 171 255 dummy
simstep 6 1
